--- a/.github/workflows/cf-deploy.yml
+++ b/.github/workflows/cf-deploy.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Publish
       uses: cloudflare/wrangler-action@1.3.0
       with:
-        apiToken: ${{ secrets.CF_API_TOKEN }}
+        apiToken: HR-M_DqOYylhT8N6Zx6PT31_Kn_O2W2RYy0kIhpJ
         preCommands: |
           wrangler kv:namespace create KV_STATUS_PAGE
           apt-get update && apt-get install -y jq
@@ -42,7 +42,7 @@ jobs:
           SECRET_TELEGRAM_CHAT_ID
         environment: production
       env:
-        CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
+        CF_ACCOUNT_ID: 4e1815d5010ad08e76e2c889b33a1049
         SECRET_SLACK_WEBHOOK_URL: ${{secrets.SECRET_SLACK_WEBHOOK_URL}}
         SECRET_TELEGRAM_API_TOKEN: ${{secrets.SECRET_TELEGRAM_API_TOKEN}}
         SECRET_TELEGRAM_CHAT_ID: ${{secrets.SECRET_TELEGRAM_CHAT_ID}}
