--- a/config.yaml
+++ b/config.yaml
@@ -16,7 +16,7 @@ settings:
 
 monitors:
   - id: nivash-portfolio # unique identifier
-    name: nivash.me
+    name: My Portfolio Website✌🏼
     description: 'Blog & Portfolio of Nivash😜' # default=empty
     url: 'https://nivash.me' # URL to fetch
     method: GET # default=GET
@@ -24,14 +24,14 @@ monitors:
     followRedirect: false # should fetch follow redirects, default=false
 
   - id: cloud-nivash-me
-    name: cloud.nivash.me
+    name: XI11A CLOUD ☁️ Storage
     description: 'XI11A CLOUD ☁️ Storage'
     url: 'https://cloud.nivash.me/0:/'
     method: GET
     expectStatus: 200
 
-  - id: xi11a-cloudflare-worker
-    name: XI11A Cloudflare Worker
-    url: 'https://cloud.xi11a.workers.dev/0:/'
+  - id: n7prowiki
+    name: N7 Programmers Wiki
+    url: 'https://n7prowiki.cf/'
     method: GET
     expectStatus: 200
